hphp/hack/test/typecheck/variablevariable.php.exp
File "variablevariable.php", line 7, characters 10-10:
Variable Variables are not legal (Parsing[1002])
